fix(rating-bar): Adjust vertical alignment and switch to flex
## Description:
This commit modifies the rating-bar to use flex as we can switch to
'column' direction in a media query and achieve the mobile appearance
with less changes.
Switching to flex also has the added benefit of allowing us to
vertically center the text in a more effective manner.
Additionally, it adjusts the padding to make the rating-bar
appear taller

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -71,8 +71,11 @@ body {
       flex-direction: column;
       flex: 1 1 0;
       .rating-bar {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
         margin: 1.5% 0;
-        padding: 3%;
+        padding: 4% 5%;
         border-radius: 5px;
         background-color: $light-gray-magenta;
         z-index: 2;
